# Intelligent_Multi_Agent_Code_Generation-

./: .gitignore  01_project-testing (1).ipynb  02_phase-2_pipeline_RTX4090 (1).ipynb  03_phase-3_INDUSTRY_STANDARD.ipynb  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: agent_prompts.yaml
cpp/: CMakeLists.txt
cpp/benchmarks/: runtime_benchmark.cpp
cpp/include/intellicode/: memory_pool.hpp  metrics.hpp  runtime.hpp  thread_pool.hpp
cpp/src/: memory_pool.cpp  metrics.cpp  pybind_module.cpp  runtime.cpp  thread_pool.cpp
cpp/tests/: test_runtime.cpp
data/humaneval/: README.md
docs/: CPP_RUNTIME.md
infra/aws/: cloudformation.yaml
scripts/: benchmark_gpu.py  benchmark_native.py  build_rag_index.py  deploy_aws.sh  download_humaneval.py  evaluate_humaneval.py  generate_humaneval.py  prepare_training_data.py  train_qlora.py
src/intellicode/: __init__.py  cli.py  factory.py  orchestrator.py  prompts.py  schemas.py  utils.py
src/intellicode/agents/: __init__.py  base.py  developer.py  judge.py  repair.py  reviewer.py  spec_analyzer.py  test_designer.py
src/intellicode/evaluation/: __init__.py  humaneval_io.py  sandbox.py
src/intellicode/llm/: __init__.py  base.py  mock_backend.py  transformers_backend.py
src/intellicode/native/: __init__.py
src/intellicode/rag/: __init__.py  retriever.py
src/intellicode/training/: __init__.py  data.py
tests/: test_humaneval_io.py  test_native_fallback.py  test_prompts.py  test_sandbox.py  test_training_guard.py
